--- a/packages/default/scss/listgroup/_layout.scss
+++ b/packages/default/scss/listgroup/_layout.scss
@@ -160,7 +160,8 @@
                     right: auto;
                     left: 0;
 
-                    .k-icon {
+                    .k-icon,
+                    .k-svg-icon {
                         transform: scaleX(-1);
                     }
                 }
@@ -179,7 +180,8 @@
                 border-right-width: 1px;
                 border-left-width: 0;
 
-                .k-icon {
+                .k-icon,
+                .k-svg-icon {
                     transform: scaleX(-1);
                 }
             }
