--- a/packages/default/scss/map/_layout.scss
+++ b/packages/default/scss/map/_layout.scss
@@ -88,7 +88,8 @@
             box-shadow: none;
             position: absolute;
 
-            .k-icon {
+            .k-icon,
+            .k-svg-icon {
                 min-width: 0;
                 min-height: 0;
             }
