--- a/packages/default/scss/panelbar/_theme.scss
+++ b/packages/default/scss/panelbar/_theme.scss
@@ -31,6 +31,7 @@
                 );
 
                 .k-icon,
+                .k-svg-icon,
                 .k-panelbar-item-icon {
                     color: $kendo-panelbar-text;
                 }
@@ -80,6 +81,7 @@
                 );
 
                 .k-icon,
+                .k-svg-icon,
                 .k-panelbar-item-icon {
                     color: inherit;
                 }
