--- a/packages/default/scss/pdf-viewer/_theme.scss
+++ b/packages/default/scss/pdf-viewer/_theme.scss
@@ -40,7 +40,8 @@
             @include box-shadow( $kendo-pdf-viewer-page-shadow );
         }
 
-        .k-blank-page > .k-icon {
+        .k-blank-page > .k-icon,
+        .k-blank-page > .k-svg-icon {
             @include fill( $color: $kendo-pdf-viewer-icon-text );
         }
 
