--- a/packages/default/scss/stepper/_theme.scss
+++ b/packages/default/scss/stepper/_theme.scss
@@ -157,7 +157,8 @@
         .k-step-label {
             @include fill( $color: $kendo-stepper-label-text );
         }
-        .k-step-success .k-step-label .k-icon {
+        .k-step-success .k-step-label .k-icon,
+        .k-step-success .k-step-label .k-svg-icon {
             @include fill( $color: $kendo-stepper-label-success-text );
         }
         .k-step-error .k-step-label {
