--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -496,6 +496,15 @@
         cursor: col-resize;
     }
 
+    .k-row-resizer {
+        width: 100%;
+        height: 2px;
+        display: block;
+        position: absolute;
+        bottom: 0;
+        cursor: row-resize;
+    }
+
     .k-grid-footer {
         border-top-width: 1px;
 
