--- a/packages/default/scss/grid/_theme.scss
+++ b/packages/default/scss/grid/_theme.scss
@@ -476,4 +476,13 @@
         border-color: $kendo-grid-border;
     }
 
+    // Row resizing
+    .k-row-resizer {
+        @include fill( $bg: $kendo-grid-row-resizer-bg );
+
+        &.k-active {
+            @include fill( $bg: $kendo-grid-row-resizer-active-bg );
+        }
+    }
+
 }
