fix(tabstrip): icons direction in rtl

--- a/packages/default/scss/tabstrip/_layout.scss
+++ b/packages/default/scss/tabstrip/_layout.scss
@@ -372,6 +372,11 @@
             > .k-tabstrip-content { order: 0; }
         }
 
+        .k-tabstrip-prev .k-button-icon,
+        .k-tabstrip-next .k-button-icon {
+            transform: scaleX(-1);
+        }
+
     }
 
 }
