--- a/packages/fluent/scss/dropzone/_theme.scss
+++ b/packages/fluent/scss/dropzone/_theme.scss
@@ -12,6 +12,7 @@
         );
 
         .k-icon,
+        .k-svg-icon,
         .k-dropzone-icon {
             color: var( --kendo-dropzone-icon-text, #{$kendo-dropzone-icon-text} );
         }
@@ -27,6 +28,7 @@
     // Hover
     .k-external-dropzone-hover {
         .k-icon,
+        .k-svg-icon,
         .k-dropzone-icon {
             color: var( --kendo-dropzone-icon-hover-text, #{$kendo-dropzone-icon-hover-text} );
         }
