--- a/packages/fluent/scss/listgroup/_layout.scss
+++ b/packages/fluent/scss/listgroup/_layout.scss
@@ -163,7 +163,8 @@
                     right: auto;
                     left: 0;
 
-                    .k-icon {
+                    .k-icon,
+                    .k-svg-icon {
                         transform: scaleX(-1);
                     }
                 }
@@ -177,7 +178,8 @@
                 border-right-width: 1px;
                 border-left-width: 0;
 
-                .k-icon {
+                .k-icon,
+                .k-svg-icon {
                     transform: scaleX(-1);
                 }
             }
