--- a/packages/fluent/scss/map/_layout.scss
+++ b/packages/fluent/scss/map/_layout.scss
@@ -89,7 +89,8 @@
             box-shadow: none;
             position: absolute;
 
-            .k-icon {
+            .k-icon,
+            .k-svg-icon {
                 min-width: 0;
                 min-height: 0;
             }
