--- a/packages/fluent/scss/pivotgrid/_layout.scss
+++ b/packages/fluent/scss/pivotgrid/_layout.scss
@@ -140,7 +140,8 @@
         overflow: hidden;
     }
 
-    .k-pivotgrid-cell .k-icon {
+    .k-pivotgrid-cell .k-icon,
+    .k-pivotgrid-cell .k-svg-icon {
         cursor: pointer;
         padding-inline-end: var( --kendo-pivotgrid-icon-spacing, #{$kendo-pivotgrid-icon-spacing} );
     }
@@ -187,7 +188,8 @@
         cursor: pointer;
         user-select: none;
 
-        .k-icon {
+        .k-icon,
+        .k-svg-icon {
             margin-inline-start: var( --kendo-pivotgrid-configurator-button-icon-spacing, #{$kendo-pivotgrid-configurator-button-icon-spacing} );
         }
 
@@ -199,7 +201,8 @@
             span {
                 writing-mode: vertical-rl;
             }
-            .k-icon {
+            .k-icon,
+            .k-svg-icon {
                 vertical-align: baseline;
             }
         }
@@ -356,7 +359,8 @@
         flex-direction: row;
         align-items: center;
 
-        .k-icon {
+        .k-icon,
+        .k-svg-icon {
             margin-inline-end: map.get( $kendo-spacing, 2 );
         }
         .k-dropdown-list {
