--- a/packages/fluent/scss/stepper/_layout.scss
+++ b/packages/fluent/scss/stepper/_layout.scss
@@ -125,7 +125,8 @@
             text-overflow: ellipsis;
             overflow: hidden;
         }
-        .k-step-label .k-icon {
+        .k-step-label .k-icon,
+        .k-step-label .k-svg-icon {
             margin-inline-start: var( --kendo-icon-spacing, .5rem );
         }
 
