--- a/packages/fluent/scss/tooltip/_layout.scss
+++ b/packages/fluent/scss/tooltip/_layout.scss
@@ -53,7 +53,8 @@
         margin-inline-start: var( --kendo-tooltip-button-spacing, .5rem );
         flex-shrink: 0;
 
-        .k-icon {
+        .k-icon,
+        .k-svg-icon {
             color: inherit;
             vertical-align: top;
         }
