--- a/packages/fluent/scss/treeview/_layout.scss
+++ b/packages/fluent/scss/treeview/_layout.scss
@@ -115,6 +115,7 @@
         position: relative;
 
         .k-icon,
+        .k-svg-icon,
         .k-image,
         .k-sprite {
             margin-inline-end: var( --kendo-icon-spacing, .5rem );
