--- a/packages/fluent/scss/breadcrumb/_layout.scss
+++ b/packages/fluent/scss/breadcrumb/_layout.scss
@@ -102,7 +102,8 @@
     }
 
     .k-breadcrumb-link > .k-image,
-    .k-breadcrumb-icontext-link .k-icon {
+    .k-breadcrumb-icontext-link .k-icon,
+    .k-breadcrumb-icontext-link .k-svg-icon {
         margin-inline-end: var( --kendo-breadcrumb-link-icon-spacing, #{$kendo-breadcrumb-link-icon-spacing} );
     }
 
