--- a/packages/fluent/scss/filemanager/_layout.scss
+++ b/packages/fluent/scss/filemanager/_layout.scss
@@ -241,7 +241,9 @@
         flex-direction: row;
         align-items: center;
     }
-    .k-filemanager-drag-hint .k-icon {
+
+    .k-filemanager-drag-hint .k-icon,
+    .k-filemanager-drag-hint .k-svg-icon {
         margin-inline-end: var( --kendo-icon-spacing, .5rem );
 
     }
