--- a/packages/fluent/scss/list/_theme.scss
+++ b/packages/fluent/scss/list/_theme.scss
@@ -69,7 +69,8 @@
     }
 
     // Icon
-    .k-list-item .k-icon {
+    .k-list-item .k-icon,
+    .k-list-item .k-svg-icon {
         @include fill(
             $color: var( --kendo-list-item-icon-text, #{$kendo-list-item-icon-text} )
         );
