--- a/packages/fluent/scss/notification/_theme.scss
+++ b/packages/fluent/scss/notification/_theme.scss
@@ -28,7 +28,8 @@
             --kendo-notification-bg: var( --kendo-notification-#{$theme-color}-bg, #{$_bg} );
             --kendo-notification-border: var( --kendo-notification-#{$theme-color}-border, #{$_border} );
 
-            .k-notification-wrap > .k-icon {
+            .k-notification-wrap > .k-icon,
+            .k-notification-wrap > .k-svg-icon {
                 --kendo-notification-icon-text: var( --kendo-notification-#{$theme-color}-icon-text, #{$_icon} );
             }
         }
