--- a/packages/fluent/scss/panelbar/_theme.scss
+++ b/packages/fluent/scss/panelbar/_theme.scss
@@ -47,6 +47,7 @@
                 );
 
                 .k-icon,
+                .k-svg-icon,
                 .k-panelbar-item-icon {
                     color: var( --kendo-panelbar-text, #{$kendo-panelbar-text} );
                 }
@@ -84,6 +85,7 @@
                     --INTERNAL--kendo-panelbar-header-border: var( --kendo-panelbar-header-selected-border, #{$kendo-panelbar-header-selected-border} );
 
                     .k-icon,
+                    .k-svg-icon,
                     .k-panelbar-item-icon {
                         color: inherit;
                     }
@@ -122,6 +124,7 @@
                     --INTERNAL--kendo-panelbar-header-text: var( --kendo-disabled-text, inherit );
 
                     .k-icon,
+                    .k-svg-icon,
                     .k-panelbar-item-icon {
                         color: inherit;
                     }
@@ -137,6 +140,7 @@
                 }
 
                 .k-icon,
+                .k-svg-icon,
                 .k-panelbar-item-icon {
                     color: inherit;
                 }
@@ -158,6 +162,7 @@
                 );
 
                 .k-icon,
+                .k-svg-icon,
                 .k-panelbar-item-icon {
                     color: var( --kendo-panelbar-text, #{$kendo-panelbar-text} );
                 }
@@ -221,6 +226,7 @@
                     --INTERNAL--kendo-panelbar-item-text: var( --kendo-disabled-text, inherit );
 
                     .k-icon,
+                    .k-svg-icon,
                     .k-panelbar-item-icon {
                         color: inherit;
                     }
@@ -236,6 +242,7 @@
                 }
 
                 .k-icon,
+                .k-svg-icon,
                 .k-panelbar-item-icon {
                     color: inherit;
                 }
