--- a/packages/fluent/scss/splitter/_layout.scss
+++ b/packages/fluent/scss/splitter/_layout.scss
@@ -65,6 +65,11 @@
             font-size: var( --kendo-splitter-resize-icon-size, #{$kendo-splitter-resize-icon-size} );
         }
 
+        .k-svg-icon {
+            width: var( --kendo-splitter-resize-icon-size, #{$kendo-splitter-resize-icon-size} );
+            height: var( --kendo-splitter-resize-icon-size, #{$kendo-splitter-resize-icon-size} );
+        }
+
     }
 
     .k-splitbar-draggable-horizontal { cursor: col-resize; }
