--- a/packages/material/scss/grid/_theme.scss
+++ b/packages/material/scss/grid/_theme.scss
@@ -132,7 +132,8 @@
         .k-link:hover {
             color: $kendo-grid-text;
 
-            > .k-icon {
+            > .k-icon,
+            > .k-svg-icon {
                 color: inherit;
             }
         }
@@ -140,7 +141,8 @@
         .k-grid-filter,
         .k-table-th-column-menu,
         .k-grid-header-menu,
-        .k-hierarchy-cell .k-icon {
+        .k-hierarchy-cell .k-icon,
+        .k-hierarchy-cell .k-svg-icon {
             &:hover {
                 color: $kendo-grid-text;
                 background-color: transparent;
