--- a/packages/material/scss/scheduler/_layout.scss
+++ b/packages/material/scss/scheduler/_layout.scss
@@ -71,6 +71,14 @@
                 box-sizing: content-box;
                 vertical-align: unset;
             }
+
+            .k-svg-icon {
+                width: $kendo-font-size-sm;
+                height: $kendo-font-size-sm;
+                padding: calc( #{$kendo-font-size-md} - #{$kendo-font-size-sm} );
+                box-sizing: content-box;
+                vertical-align: unset;
+            }
         }
 
         .k-resize-handle {
