--- a/packages/nouvelle/scss/breadcrumb/_layout.scss
+++ b/packages/nouvelle/scss/breadcrumb/_layout.scss
@@ -89,7 +89,8 @@
     }
 
     .k-breadcrumb-link > .k-image,
-    .k-breadcrumb-icontext-link .k-icon {
+    .k-breadcrumb-icontext-link .k-icon,
+    .k-breadcrumb-icontext-link .k-svg-icon {
         margin-inline-end: var( --kendo-breadcrumb-link-icon-spacing, #{k-if-var( $kendo-breadcrumb-link-icon-spacing, 0 )} );
     }
 
